fix media query that misaligned seating chart at 290px

--- a/styles.css
+++ b/styles.css
@@ -206,7 +206,7 @@ input {
 
 @media (max-width: 290px) {
   .seat-chart {
-  width: 100%;
+  width: 98%;
   margin: 0 auto;
   margin-top: 10%;
   padding-bottom: 10%;
@@ -216,11 +216,9 @@ input {
     margin: 1px 0px 1px 0px ;
     min-height: 45px;
   }
-
   .reserved {
     margin: 1px 0px 1px 0px;
     min-height: 45px;
   }
-
 
 }
